--- a/.env.production
+++ b/.env.production
@@ -4,4 +4,4 @@
 #Therefore you should never put anything secret in .env file in Vite -projects.
 #When you add a new environment variable here, start it with "VITE_" otherwise vite doesn't allow it to be included to build.
 #Because Typescript is used in project, you must also include new environment variables to ./src/vite-env.d.ts -file
-VITE_API_URL=https://todistusvalinta.fi:8000/graphql
+VITE_API_URL=https://todistusvalinta.fi/graphql
