--- a/.env.production
+++ b/.env.production
@@ -5,3 +5,5 @@
 #When you add a new environment variable here, start it with "VITE_" otherwise vite doesn't allow it to be included to build.
 #Because Typescript is used in project, you must also include new environment variables to ./src/vite-env.d.ts -file
 VITE_API_URL=https://todistusvalinta.fi/graphql
+VITE_ADSENSE_CLIENT=ca-pub-6696837920628178
+VITE_ADSENSE_SLOT=3214961674
