better use of env -file and fixed button styling

--- a/.env.production
+++ b/.env.production
@@ -7,3 +7,4 @@
 VITE_API_URL=https://todistusvalinta.fi/graphql
 VITE_ADSENSE_CLIENT=ca-pub-6696837920628178
 VITE_ADSENSE_SLOT=3214961674
+VITE_ENVIRONMENT=production
