--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
-    "embla-carousel-react": "^8.5.1",
+    "embla-carousel": "^8.5.2",
+    "embla-carousel-autoplay": "^8.5.2",
+    "embla-carousel-fade": "^8.5.2",
+    "embla-carousel-react": "^8.5.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.468.0",
     "react": "^18.3.1",
