--- a/.env.production
+++ b/.env.production
@@ -9,3 +9,4 @@ VITE_SERVER_URL=https://todistusvalinta.fi
 VITE_ADSENSE_CLIENT=ca-pub-6696837920628178
 VITE_ADSENSE_SLOT=3214961674
 VITE_ENVIRONMENT=production
+VITE_RECAPTCHA_SITE_KEY=6LfLm1srAAAAAMMul_YnNPxGB39GwdtgMCvDA0fV
